RESOLVED FIXED278109
Fix crash in WebPushDaemon::connectionRemoved
https://bugs.webkit.org/show_bug.cgi?id=278109
Summary Fix crash in WebPushDaemon::connectionRemoved
Ben Nham
Reported 2024-08-14 09:39:17 PDT
See PR
Attachments
Ben Nham
Comment 1 2024-08-14 09:39:18 PDT
Ben Nham
Comment 2 2024-08-14 09:43:12 PDT
EWS
Comment 3 2024-08-14 10:36:51 PDT
Committed 282244@main (84d583b6a22b): <https://commits.webkit.org/282244@main> Reviewed commits have been landed. Closing PR #32199 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.