Fix crash in WebPushDaemon::connectionRemoved https://bugs.webkit.org/show_bug.cgi?id=278109 rdar://133806943

Reviewed by Brady Eidson.

In 282035@main I changed how PushClientConnection creation occurs by introducing a pending
connection set. This can cause a crash in WebPushDaemon::connectionRemoved when an invalid
connection is detected. In that case, we remove the connection from pendingConnectionSet in
connectionEventHandler, which then eventually triggers the connectionRemoved callback to run. When
the connectionRemoved callback runs, it cannot find the XPC connection in either the pending
connection set or the connection map, leading to a crash.

Fix this by allowing connectionRemoved to ignore the case where the passed in connection is in
neither the pending connection set nor the connection map.

* Source/WebKit/webpushd/WebPushDaemon.mm:
(WebPushD::WebPushDaemon::connectionEventHandler):
(WebPushD::WebPushDaemon::connectionRemoved):

Canonical link: https://commits.webkit.org/282244@main